Cherry-pick 275376@main (dd25a04355e3). https://bugs.webkit.org/show_bug.cgi?id=268874

Regression (Safari 17 vs 16.5, 261003@main): height collapsing on auto-height image when container-type set on parent
    https://bugs.webkit.org/show_bug.cgi?id=268874

    Reviewed by Alan Baradlay.

    In r261003 isComputingSizeOrInlineSizeContainment was used which did not consider grid track sizing direction. Fix that
    by using shouldCheckExplicitIntrinsicInnerLogicalSize which will take the direction into account.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-flex-fraction-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-flex-fraction.html: Added.
    * Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
    (WebCore::IndefiniteSizeStrategy::findUsedFlexFraction const):
    * Source/WebCore/rendering/RenderGrid.h:

    Canonical link: https://commits.webkit.org/275376@main

Canonical link: https://commits.webkit.org/274313.188@webkitglib/2.44